creusot/tests/should_fail/prusti/blocked_lifetime/trait_bound.stderr
error[creusot]: Invalid dereference
 --> trait_bound.rs:4:12
  |
4 | #[ensures(*x == 0u32)]
  |            ^

error: aborting due to previous error

